test/tests/compiler/18_structures/invalid_types/extra_credit/incomplete_unions/sizeof_incomplete_union_type.plx
#  Can't apply sizeof to an incomplete union type

pub fn main(none) i32 {
    type union u;
    
    return sizeof<union u> #  invalid - union u type is incomplete
}
